--- a/package.json
+++ b/package.json
@@ -13,6 +13,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^26.1.0"
+    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "jest": "^26.1.0",
+    "nstall": "^0.2.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.10.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
