--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Appointments system",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "jest --coverage --watchAll"
   },
   "repository": {
@@ -16,8 +17,11 @@
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "jest": "^26.1.0",
-    "nstall": "^0.2.0"
+    "nstall": "^0.2.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@babel/runtime": "^7.10.4",
