--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^8.1.0",
     "jest": "^26.1.0",
     "nstall": "^0.2.0",
+    "react-test-renderer": "^16.13.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
